Restructured Incidents and EventCategories and plumbed that into all views. Also improved Year View.  On branch master  Changes to be committed:
	modified:   .classpath
	modified:   res/values/colors.xml
	modified:   src/com/stronans/android/agenda/adapters/AgendaListAdapter.java
	modified:   src/com/stronans/android/agenda/adapters/DayListAdapter.java
	modified:   src/com/stronans/android/agenda/adapters/IncidentListAdapter.java
	modified:   src/com/stronans/android/agenda/dataaccess/AgendaData.java
	modified:   src/com/stronans/android/agenda/fragments/AgendaFragment.java
	modified:   src/com/stronans/android/agenda/model/AgendaItem.java
	modified:   src/com/stronans/android/agenda/model/EventCategory.java
	modified:   src/com/stronans/android/agenda/model/Incident.java
	modified:   src/com/stronans/android/agenda/support/FormattedInfo.java
	modified:   src/com/stronans/android/agenda/views/DayView.java
	modified:   src/com/stronans/android/agenda/views/MonthGridView.java
	modified:   src/com/stronans/android/agenda/views/WeekDayView.java
	modified:   src/com/stronans/android/agenda/views/YearView.java
	modified:   src/com/stronans/android/controllers/AgendaConfiguration.java

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -77,4 +77,6 @@
 	<color name="Crimson">#993366</color>
 	<color name="OceanGreen">#996633</color>
 	<color name="Walnut">#663300</color>
+	<color name="Amber">#FFBF00</color>
+	<color name="BrightGreen">#66FF00</color>
 </resources>
