--- a/res/layout/task_popup.xml
+++ b/res/layout/task_popup.xml
@@ -1,176 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Black"
-            android:text="@string/titletext"
-            android:textSize="20sp"
-            android:layout_marginRight="10dp" />
-        
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/darker_gray"
+                android:text="@string/titletext"
+                android:textSize="20sp"
+                android:layout_marginRight="10dp"/>
+
         <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Black"
-            android:textSize="20sp" />
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/Black"
+                android:textSize="20sp"/>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Black"
-            android:text="@string/descriptiontext"
-            android:textSize="16sp"
-            android:layout_marginRight="10dp" />
-        
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".4"
+                android:textColor="@android:color/darker_gray"
+                android:text="@string/descriptiontext"
+                android:textSize="16sp"
+                android:layout_marginRight="10dp"/>
+
         <TextView
-	        android:id="@+id/description"
-	        android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-	        android:textColor="@color/Black"
-	        android:textSize="16sp" />
+                android:id="@+id/description"
+                android:layout_weight=".6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/Black"
+                android:textSize="16sp"/>
     </LinearLayout>
+    <!--
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
 
-    
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/Black"
+                android:text="@string/notestext"
+                android:textSize="16sp"
+                android:layout_marginRight="10dp" />
+
+            <TextView
+                android:id="@+id/notes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/Black"
+                android:textSize="16sp" />
+        </LinearLayout>
+    -->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Black"
-            android:text="@string/notestext"
-            android:textSize="16sp"
-            android:layout_marginRight="10dp" />
-        
-	    <TextView
-	        android:id="@+id/notes"
-	        android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-	        android:textColor="@color/Black"
-	        android:textSize="16sp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".4"
+                android:textColor="@android:color/darker_gray"
+                android:text="@string/plannedstarttext"
+                android:textSize="16sp"
+                android:layout_marginRight="10dp"/>
+
+        <TextView
+                android:id="@+id/plannedstart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight=".6"
+                android:layout_gravity="right"
+                android:textColor="@color/Black"
+                android:textSize="16sp"/>
     </LinearLayout>
-    
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Black"
-            android:text="@string/plannedstarttext"
-            android:textSize="16sp"
-            android:layout_marginRight="10dp" />
-    
-	    <TextView
-	        android:id="@+id/plannedstart"
-	        android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-	        android:textColor="@color/Black"
-	        android:textSize="16sp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".4"
+                android:textColor="@android:color/darker_gray"
+                android:text="@string/startdatetext"
+                android:textSize="16sp"
+                android:layout_marginRight="10dp"/>
+
+        <TextView
+                android:id="@+id/actualstart"
+                android:layout_width="match_parent"
+                android:layout_weight=".6"
+                android:layout_gravity="right"
+                android:layout_height="wrap_content"
+                android:textColor="@color/Black"
+                android:textSize="16sp"/>
     </LinearLayout>
-    
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Black"
-            android:text="@string/startdatetext"
-            android:textSize="16sp"
-            android:layout_marginRight="10dp" />
-    
-	    <TextView
-	        android:id="@+id/actualstart"
-	        android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-	        android:textColor="@color/Black"
-	        android:textSize="16sp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".4"
+                android:textColor="@color/Black"
+                android:text="@string/percentagetext"
+                android:textSize="16sp"
+                android:layout_marginRight="10dp"/>
+
+        <TextView
+                android:id="@+id/percentcomplete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".6"
+                android:textColor="@color/Black"
+                android:textSize="16sp"/>
     </LinearLayout>
-    
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Black"
-            android:text="@string/percentagetext"
-            android:textSize="16sp"
-            android:layout_marginRight="10dp" />
-    
-	    <TextView
-	        android:id="@+id/percentcomplete"
-	        android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-	        android:textColor="@color/Black"
-	        android:textSize="16sp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/darker_gray"
+                android:layout_weight=".4"
+                android:text="@string/targetdatetext"
+                android:textSize="16sp"
+                android:layout_marginRight="10dp"/>
+
+        <TextView
+                android:id="@+id/targetdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight=".6"
+                android:textColor="@color/Black"
+                android:textSize="16sp"/>
     </LinearLayout>
-	    
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Black"
-            android:text="@string/targetdatetext"
-            android:textSize="16sp"
-            android:layout_marginRight="10dp" />
-    
-	    <TextView
-	        android:id="@+id/targetdate"
-	        android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-	        android:textColor="@color/Black"
-	        android:textSize="16sp" />
-    </LinearLayout>
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" >
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/darker_gray"
+                android:layout_weight=".4"
+                android:text="@string/lastUpdated"
+                android:textSize="16sp"
+                android:layout_marginRight="10dp"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/Black"
-            android:text="@string/lastUpdated"
-            android:textSize="16sp"
-            android:layout_marginRight="10dp" />
-    
-	    <TextView
-	        android:id="@+id/lastupdated"
-	        android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-	        android:textColor="@color/Black"
-	        android:textSize="16sp" />
+                android:id="@+id/lastupdated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".6"
+                android:layout_gravity="right"
+                android:textColor="@color/Black"
+                android:textSize="16sp"/>
     </LinearLayout>
-    
 </LinearLayout>
