--- a/res/layout/tasklayout.xml
+++ b/res/layout/tasklayout.xml
@@ -1,26 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-   	android:background="@color/Ivory"
-    android:orientation="vertical" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/Ivory"
+              android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-    	android:background="@color/StandardBlue"
-		android:paddingLeft="5dp"
-	   	android:paddingRight="5dp"
-	   	android:paddingBottom="5dp"
-    	android:textColor="@color/White"
-	    android:textSize="22sp"
-        android:text="@string/task_title" />
-    
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:padding="0dp"
+            android:layout_height="match_parent"
+            android:descendantFocusability="blocksDescendants">
+
+        <TextView
+                android:id="@+id/taskHeader"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:singleLine="true"
+                android:background="@color/StandardBlue"
+                android:paddingBottom="5dp"
+                android:textColor="@color/White"
+                android:textSize="22sp"
+                android:text="@string/task_title"/>
+
+        <ImageButton
+                android:id="@+id/taskParent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="0dp"
+                android:contentDescription="@string/emptyText"
+                android:visibility="gone"
+                android:src="@drawable/ic_menu_revert"/>
+    </LinearLayout>
+
     <ListView
-        android:id="@+id/taskList"
-        android:layout_width="match_parent"
-        android:divider="@color/DarkGrey"
-        android:dividerHeight="1dp"
-        android:layout_height="match_parent" />
+            android:id="@+id/taskList"
+            android:layout_width="match_parent"
+            android:divider="@color/DarkGrey"
+            android:dividerHeight="1dp"
+            android:layout_height="match_parent"/>
 
 </LinearLayout>
