--- a/res/layout/tasklayout.xml
+++ b/res/layout/tasklayout.xml
@@ -7,16 +7,15 @@
 
     <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="0dp"
-            android:layout_height="match_parent"
             android:descendantFocusability="blocksDescendants">
 
         <TextView
                 android:id="@+id/taskHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:paddingLeft="4dp"
