--- a/res/layout/task_popup.xml
+++ b/res/layout/task_popup.xml
@@ -26,12 +26,13 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:weightSum="100">
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".4"
+                android:layout_weight="50"
                 android:textColor="@android:color/darker_gray"
                 android:text="@string/descriptiontext"
                 android:textSize="16sp"
@@ -39,8 +40,8 @@
 
         <TextView
                 android:id="@+id/description"
-                android:layout_weight=".6"
-                android:layout_width="wrap_content"
+                android:layout_weight="50"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/Black"
                 android:textSize="16sp"/>
@@ -70,13 +71,12 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:weightSum="100">
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".4"
+                android:layout_weight="50"
                 android:textColor="@android:color/darker_gray"
                 android:text="@string/plannedstarttext"
                 android:textSize="16sp"
@@ -84,9 +84,9 @@
 
         <TextView
                 android:id="@+id/plannedstart"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".6"
+                android:layout_weight="50"
                 android:layout_gravity="right"
                 android:textColor="@color/Black"
                 android:textSize="16sp"/>
@@ -95,13 +95,12 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:weightSum="100">
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".4"
+                android:layout_weight="50"
                 android:textColor="@android:color/darker_gray"
                 android:text="@string/startdatetext"
                 android:textSize="16sp"
@@ -109,8 +108,8 @@
 
         <TextView
                 android:id="@+id/actualstart"
-                android:layout_width="match_parent"
-                android:layout_weight=".6"
+                android:layout_width="0dp"
+                android:layout_weight="50"
                 android:layout_gravity="right"
                 android:layout_height="wrap_content"
                 android:textColor="@color/Black"
@@ -120,22 +119,22 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:weightSum="100">
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:textColor="@color/Black"
+                android:layout_weight="50"
+                android:textColor="@android:color/darker_gray"
                 android:text="@string/percentagetext"
                 android:textSize="16sp"
                 android:layout_marginRight="10dp"/>
 
         <TextView
                 android:id="@+id/percentcomplete"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".6"
+                android:layout_weight="50"
                 android:textColor="@color/Black"
                 android:textSize="16sp"/>
     </LinearLayout>
@@ -143,23 +142,23 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:weightSum="100">
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/darker_gray"
-                android:layout_weight=".4"
+                android:layout_weight="50"
                 android:text="@string/targetdatetext"
                 android:textSize="16sp"
                 android:layout_marginRight="10dp"/>
 
         <TextView
                 android:id="@+id/targetdate"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_weight=".6"
+                android:layout_weight="50"
                 android:textColor="@color/Black"
                 android:textSize="16sp"/>
     </LinearLayout>
@@ -167,22 +166,22 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:weightSum="100">
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/darker_gray"
-                android:layout_weight=".4"
+                android:layout_weight="50"
                 android:text="@string/lastUpdated"
                 android:textSize="16sp"
                 android:layout_marginRight="10dp"/>
 
         <TextView
                 android:id="@+id/lastupdated"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".6"
+                android:layout_weight="50"
                 android:layout_gravity="right"
                 android:textColor="@color/Black"
                 android:textSize="16sp"/>
