Updated adding dates in tasks

--- a/res/menu/taskbasemenu.xml
+++ b/res/menu/taskbasemenu.xml
@@ -11,5 +11,15 @@
           android:title="@string/refresh"
 		  android:icon="@drawable/ic_menu_refresh"
           android:orderInCategory="2" />
-    
+
+    <item android:id="@+id/menu_task_display"
+          android:title="Display all tasks"
+          android:icon="@drawable/ic_menu_refresh"
+          android:orderInCategory="3" />
+<!--
+    <item android:id="@+id/menu_task_purge"
+          android:title="Purge task DB"
+          android:icon="@drawable/ic_menu_refresh"
+          android:orderInCategory="4" />
+-->
 </menu>
