--- a/res/layout/agenda_message_item.xml
+++ b/res/layout/agenda_message_item.xml
@@ -15,7 +15,7 @@
     <TextView
             android:id="@+id/MessageInfo"
             android:textSize="20sp"
-            android:paddingLeft="25dp"
+            android:paddingStart="25dp"
             android:layout_marginRight="8dp"
             android:textColor="@color/White"
             android:layout_width="wrap_content"
