--- a/res/layout/task_list_item.xml
+++ b/res/layout/task_list_item.xml
@@ -13,12 +13,12 @@
             android:textColor="@color/Black"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:paddingTop="6dp"
+            android:paddingTop="10dp"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
-            android:paddingBottom="6dp"
-            android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:paddingBottom="10dp"
+            android:textSize="20sp"
+            android:singleLine="true" />
 
     <ImageButton
             android:id="@+id/taskChildren"
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:padding="0dp"
             android:contentDescription="@string/emptyText"
+            android:background="@android:color/transparent"
             android:visibility="gone"
             android:src="@drawable/ic_menu_moreoverflow"/>
 
