--- a/res/layout/tasklayout.xml
+++ b/res/layout/tasklayout.xml
@@ -18,23 +18,23 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ellipsize="end"
-                android:paddingTop="8dp"
+                android:paddingTop="10dp"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
-                android:paddingBottom="9dp"
+                android:paddingBottom="10dp"
+                android:textSize="20sp"
                 android:singleLine="true"
                 android:textColor="@color/White"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/task_title"/>
 
         <ImageButton
                 android:id="@+id/taskParent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="0dp"
                 android:contentDescription="@string/emptyText"
                 android:visibility="gone"
-                android:src="@drawable/ic_menu_revert"/>
+                android:background="@drawable/ic_menu_revert"/>
+
     </LinearLayout>
 
     <ListView
