--- a/res/layout/task_add_dialogue.xml
+++ b/res/layout/task_add_dialogue.xml
@@ -8,18 +8,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        style="?android:attr/buttonBarStyle">
 
         <Button
             android:id="@+id/submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="?android:attr/buttonBarButtonStyle"
             android:text="@string/submitButton"/>
 
         <Button
             android:id="@+id/cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="?android:attr/buttonBarButtonStyle"
             android:text="@string/cancelButton"/>
 
     </LinearLayout>
@@ -28,26 +31,28 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/titletext" />
+            android:labelFor="@+id/inputtitle"
+            android:text="@string/titletext" >
+    </TextView>
 
     <EditText
             android:id="@+id/inputtitle"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-        <requestFocus/>
+            <requestFocus/>
     </EditText>
 
     <!-- Description of Task -->
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:labelFor="@+id/inputdescription"
             android:text="@string/descriptiontext"/>
 
     <EditText
             android:id="@+id/inputdescription"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
 
@@ -55,6 +60,7 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:labelFor="@+id/inputnotes"
             android:text="@string/notestext"/>
 
     <EditText
@@ -117,11 +123,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="40"
+                android:labelFor="@+id/inputpercentage"
                 android:text="@string/percentagetext"/>
 
         <EditText
                 android:id="@+id/inputpercentage"
-                android:inputType="text"
+                android:inputType="number"
                 android:layout_width="0dip"
                 android:layout_weight="40"
                 android:layout_height="wrap_content"/>
