--- a/res/layout/incident_list_item.xml
+++ b/res/layout/incident_list_item.xml
@@ -8,7 +8,7 @@
     android:background="@color/Ivory" >
     
     <TextView
-        android:id="@+id/incidenttitle"
+        android:id="@+id/incidentTitle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
