--- a/res/layout/task_add_dialogue.xml
+++ b/res/layout/task_add_dialogue.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@+id/inputtitle"
-            android:text="@string/titletext" >
+            android:text="@string/titleText" >
     </TextView>
 
     <EditText
