--- a/res/layout/task_popup.xml
+++ b/res/layout/task_popup.xml
@@ -5,185 +5,190 @@
               android:orientation="vertical">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/darker_gray"
-                android:text="@string/titletext"
-                android:textSize="20sp"
-                android:layout_marginRight="10dp"/>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="@string/firstSection"
+            android:textColor="@android:color/darker_gray"
+            android:text="@string/titleText"
+            android:textSize="@dimen/titleSize"
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/Black"
-                android:textSize="20sp"/>
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="@string/secondSection"
+            android:textColor="@color/Black"
+            android:textSize="@dimen/titleSize"/>
     </LinearLayout>
 
     <LinearLayout
-            android:layout_width="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
+
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:weightSum="100">
+            android:layout_weight="@string/firstSection"
+            android:textColor="@android:color/darker_gray"
+            android:text="@string/descriptiontext"
+            android:textSize="@dimen/textSize"
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@android:color/darker_gray"
-                android:text="@string/descriptiontext"
-                android:textSize="16sp"
-                android:layout_marginRight="10dp"/>
-
-        <TextView
-                android:id="@+id/description"
-                android:layout_weight="50"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/Black"
-                android:textSize="16sp"/>
-    </LinearLayout>
-    <!--
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/description"
+            android:layout_weight="@string/secondSection"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/Black"
-                android:text="@string/notestext"
-                android:textSize="16sp"
-                android:layout_marginRight="10dp" />
-
-            <TextView
-                android:id="@+id/notes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/Black"
-                android:textSize="16sp" />
-        </LinearLayout>
-    -->
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="100">
-
-        <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@android:color/darker_gray"
-                android:text="@string/plannedstarttext"
-                android:textSize="16sp"
-                android:layout_marginRight="10dp"/>
-
-        <TextView
-                android:id="@+id/plannedstart"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:layout_gravity="right"
-                android:textColor="@color/Black"
-                android:textSize="16sp"/>
+            android:textColor="@color/Black"
+            android:textSize="@dimen/textSize"/>
     </LinearLayout>
 
     <LinearLayout
-            android:layout_width="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
+
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:weightSum="100">
+            android:layout_weight="@string/firstSection"
+            android:textColor="@android:color/darker_gray"
+            android:text="@string/notestext"
+            android:textSize="@dimen/textSize"
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@android:color/darker_gray"
-                android:text="@string/startdatetext"
-                android:textSize="16sp"
-                android:layout_marginRight="10dp"/>
-
-        <TextView
-                android:id="@+id/actualstart"
-                android:layout_width="0dp"
-                android:layout_weight="50"
-                android:layout_gravity="right"
-                android:layout_height="wrap_content"
-                android:textColor="@color/Black"
-                android:textSize="16sp"/>
+            android:id="@+id/notes"
+            android:layout_weight="@string/secondSection"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/Black"
+            android:textSize="@dimen/textSize"/>
     </LinearLayout>
 
     <LinearLayout
-            android:layout_width="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
+
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:weightSum="100">
+            android:layout_weight="@string/firstSection"
+            android:textColor="@android:color/darker_gray"
+            android:text="@string/plannedstarttext"
+            android:textSize="@dimen/textSize"
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@android:color/darker_gray"
-                android:text="@string/percentagetext"
-                android:textSize="16sp"
-                android:layout_marginRight="10dp"/>
-
-        <TextView
-                android:id="@+id/percentcomplete"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@color/Black"
-                android:textSize="16sp"/>
+            android:id="@+id/plannedstart"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="@string/secondSection"
+            android:layout_gravity="end"
+            android:textColor="@color/Black"
+            android:textSize="@dimen/textSize"/>
     </LinearLayout>
 
     <LinearLayout
-            android:layout_width="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
+
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:weightSum="100">
+            android:layout_weight="@string/firstSection"
+            android:textColor="@android:color/darker_gray"
+            android:text="@string/startdatetext"
+            android:textSize="@dimen/textSize"
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/darker_gray"
-                android:layout_weight="50"
-                android:text="@string/targetdatetext"
-                android:textSize="16sp"
-                android:layout_marginRight="10dp"/>
-
-        <TextView
-                android:id="@+id/targetdate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_weight="50"
-                android:textColor="@color/Black"
-                android:textSize="16sp"/>
+            android:id="@+id/actualstart"
+            android:layout_width="0dp"
+            android:layout_weight="@string/secondSection"
+            android:layout_gravity="end"
+            android:layout_height="wrap_content"
+            android:textColor="@color/Black"
+            android:textSize="@dimen/textSize"/>
     </LinearLayout>
 
     <LinearLayout
-            android:layout_width="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
+
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:weightSum="100">
+            android:layout_weight="@string/firstSection"
+            android:textColor="@android:color/darker_gray"
+            android:text="@string/percentagetext"
+            android:textSize="@dimen/textSize"
+            android:layout_marginEnd="10dp"/>
 
         <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/darker_gray"
-                android:layout_weight="50"
-                android:text="@string/lastUpdated"
-                android:textSize="16sp"
-                android:layout_marginRight="10dp"/>
+            android:id="@+id/percentcomplete"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="@string/secondSection"
+            android:textColor="@color/Black"
+            android:textSize="@dimen/textSize"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
 
         <TextView
-                android:id="@+id/lastupdated"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:layout_gravity="right"
-                android:textColor="@color/Black"
-                android:textSize="16sp"/>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/darker_gray"
+            android:layout_weight="@string/firstSection"
+            android:text="@string/targetdatetext"
+            android:textSize="@dimen/textSize"
+            android:layout_marginEnd="10dp"/>
+
+        <TextView
+            android:id="@+id/targetdate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_weight="@string/secondSection"
+            android:textColor="@color/Black"
+            android:textSize="@dimen/textSize"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/darker_gray"
+            android:layout_weight="@string/firstSection"
+            android:text="@string/lastUpdated"
+            android:textSize="@dimen/textSize"
+            android:layout_marginEnd="10dp"/>
+
+        <TextView
+            android:id="@+id/lastupdated"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="@string/secondSection"
+            android:layout_gravity="end"
+            android:textColor="@color/Black"
+            android:textSize="@dimen/textSize"/>
     </LinearLayout>
 </LinearLayout>
