--- a/res/layout/daylistitem.xml
+++ b/res/layout/daylistitem.xml
@@ -19,7 +19,7 @@
         android:textSize="12sp" />
 	
     <TextView
-        android:id="@+id/incidentlocation"
+        android:id="@+id/dayIncidentlocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/Black"
