--- a/res/layout/agenda_popup.xml
+++ b/res/layout/agenda_popup.xml
@@ -1,38 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
     <TextView
-        android:id="@+id/incidentTitle"
+        android:id="@+id/agendaIncidentTitle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-	    android:textColor="@color/Black"
-        android:textSize="@dimen/titleSize" />
-	
+        android:textColor="@color/Black"
+        android:textSize="@dimen/titleSize"/>
+
     <TextView
-        android:id="@+id/incidentperiod"
+        android:id="@+id/agendaIncidentperiod"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-	    android:textColor="@color/Black"
-        android:textSize="@dimen/textSize" />
-	
+        android:layout_height="wrap_content"
+        android:textColor="@color/Black"
+        android:textSize="@dimen/textSize"/>
+
     <TextView
-        android:id="@+id/incidentlocation"
+        android:id="@+id/agendaIncidentlocation"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-		android:layout_weight="0"
-	    android:textColor="@color/Black"
-        android:textSize="@dimen/textSize" />
-	
+        android:layout_height="wrap_content"
+        android:textColor="@color/Black"
+        android:visibility="gone"
+        android:textSize="@dimen/textSize"/>
+
     <TextView
-        android:id="@+id/incidentdescription"
+        android:id="@+id/agendaIncidentdescription"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-	    android:textColor="@color/Black"
-        android:textSize="@dimen/textSize" />
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textColor="@color/Black"
+        android:textSize="@dimen/textSize"/>
 </LinearLayout>
