--- a/res/layout/incident_list_item.xml
+++ b/res/layout/incident_list_item.xml
@@ -10,24 +10,22 @@
     <TextView
         android:id="@+id/incidentTitle"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+		android:layout_height="wrap_content"
 	    android:textColor="@color/Black"
         android:textSize="16sp" />
 	
     <TextView
         android:id="@+id/incidentperiod"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+		android:layout_height="wrap_content"
 	    android:textColor="@color/Black"
         android:textSize="12sp" />
 	
     <TextView
         android:id="@+id/incidentlocation"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-		android:layout_weight="0"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:visibility="gone"
 	    android:textColor="@color/Black"
         android:textSize="12sp" />
 	
