--- a/res/layout/task_list_item.xml
+++ b/res/layout/task_list_item.xml
@@ -1,33 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:orientation="horizontal"
               android:layout_height="match_parent"
+              android:orientation="horizontal"
               android:descendantFocusability="blocksDescendants">
 
-    <TextView
-            android:id="@+id/taskTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/Black"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:paddingTop="10dp"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:paddingBottom="10dp"
-            android:textSize="20sp"
-            android:singleLine="true" />
+    <LinearLayout android:orientation="vertical"
+                  android:layout_width="0dp"
+                  android:layout_height="match_parent"
+                  android:layout_weight="1"
+                  android:paddingTop="5dp"
+                  android:paddingLeft="4dp"
+                  android:paddingRight="4dp"
+                  android:paddingBottom="5dp">
 
-    <ImageButton
-            android:id="@+id/taskChildren"
+        <TextView
+            android:id="@+id/taskTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
-            android:contentDescription="@string/emptyText"
-            android:background="@android:color/transparent"
-            android:visibility="gone"
-            android:src="@drawable/ic_menu_moreoverflow"/>
+            android:textColor="@color/Black"
+            android:ellipsize="end"
+            android:textSize="18sp"
+            android:singleLine="true"/>
+
+        <TextView
+            android:id="@+id/childTasksMsg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/Black"
+            android:textSize="14sp"
+            android:visibility="gone"/>
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/taskChildren"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:contentDescription="@string/emptyText"
+        android:background="@android:color/transparent"
+        android:visibility="gone"
+        android:src="@drawable/ic_menu_moreoverflow"/>
 
 </LinearLayout>
